# Terminal-Agent

./: .env.example  .gitignore  README.en.md  README.md  README.pt-BR.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: agent.py  cli.py  config.py  db.py  tools.py
