[project]
name = "terminal-agent"
version = "0.1.0"
description = "Terminal-first AI assistant with task tools and persistent history"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.3.0",
  "typer>=0.12.5",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "langgraph>=0.2.34",
  "langchain-groq>=0.2.0"
]

[project.scripts]
terminal-agent = "app.cli:cli"
agent-cli = "app.cli:cli"
